--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/xTanzu/HY_FullStack_osa3/tree/main#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.1",
     "morgan": "^1.10.0"
